--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/reset.css" />
-    <script src="class.js" defer></script>
-    <script src="main.js" defer></script>
+    <script src="./js/Background.js" defer></script>
+    <script src="./js/Plane.js" defer></script>
+    <script src="./js/main.js" defer></script>
     <title>AeroDash</title>
   </head>
   <body>
